--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
     <groupId>org.example</groupId>
     <artifactId>Spring</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>les_1_servlet_api</module>
+    </modules>
+    <packaging>pom</packaging>
 
-
+    <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+    </properties>
 </project>
