--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,16 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>les_1_servlet_api</module>
+        <module>les_2_spring_basics</module>
     </modules>
     <packaging>pom</packaging>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
+        <spring.version>5.3.3</spring.version>
     </properties>
+
+
+
 </project>
