--- a/les_1_servlet_api/pom.xml
+++ b/les_1_servlet_api/pom.xml
@@ -19,6 +19,16 @@
             <version>4.0.1</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
     </dependencies>
 
 
@@ -46,7 +56,7 @@
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.2</version>
                 <configuration>
-                    <url>http://31.31.201.222:8080/manager/text</url><!-- localhost/31.31.201.222-->
+                    <url>http://localhost:8080/manager/text</url><!-- localhost/31.31.201.222-->
                     <username>admin</username>
                     <password>admin</password>
                     <path>/servlet-app</path>
