--- a/les_3_spring_mvc/pom.xml
+++ b/les_3_spring_mvc/pom.xml
@@ -67,7 +67,7 @@
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.2</version>
                 <configuration>
-                    <url>http://localhost:8080/manager/text</url> <!-- localhost/31.31.201.222-->
+                    <url>http://31.31.201.222:8080/manager/text</url> <!-- localhost/31.31.201.222-->
                     <username>admin</username>
                     <password>admin</password>
                     <path>/spring-mvc-app</path>
