--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>les_1_servlet_api</module>
         <module>les_2_spring_basics</module>
         <module>les_3_spring_mvc</module>
+        <module>les_4_spring_boot</module>
         <module>Spring-consumer</module>
     </modules>
     <packaging>pom</packaging>
