--- a/less_4_spring_boot/src/main/resources/application.properties
+++ b/less_4_spring_boot/src/main/resources/application.properties
@@ -1,4 +1,15 @@
 server.servlet.context-path=/spring-mvc-app
 server.port=8080
 
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_db_data?createDatabaseIfNotExist=true&amp;allowPublicKeyRetrieval=true&amp;useSSL=false&amp;useUnicode=true&amp;characterEncoding=UTF-8&amp;serverTimezone=UTC
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.name=root
+spring.datasource.password=eseveb12
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.ddl-auto=update
+
+
 spring.mvc.hiddenmethod.filter.enabled=true
